# opensergo

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
opensergo/: Cargo.toml
opensergo-proto/: Cargo.toml  volo.yml
opensergo/src/: env.rs  lib.rs  meta.rs
