[workspace]
members = ["opensergo", "opensergo-proto"]
resolver = "2"

[workspace.package]
authors = ["Volo Team <volo@cloudwego.io>", "OpenSergo Team"]
edition = "2021"
homepage = "https://opensergo.io/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/volo-rs/opensergo"

[workspace.dependencies]
# motore = "0.2"
# pilota = "0.2"
# pilota-build = "0.2"
# volo = "0.2"
# volo-build = "0.2"
# volo-grpc = "0.2"
motore = { git = "https://github.com/cloudwego/motore", branch = "main" }
pilota = { git = "https://github.com/cloudwego/pilota", branch = "main" }
pilota-build = { git = "https://github.com/cloudwego/pilota", branch = "main" }
volo = { git = "https://github.com/cloudwego/volo", branch = "main" }
volo-build = { git = "https://github.com/cloudwego/volo", branch = "main" }
volo-grpc = { git = "https://github.com/cloudwego/volo", branch = "main" }

anyhow = "1"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1"
prost = "0.11"
serde = "1"
serde_json = "1"
tokio = "1"
