[package]
name = "opensergo"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust implementation of the OpenSergo specification."
documentation = "https://docs.rs/opensergo"
readme = "README.md"
categories = []
keywords = ["opensergo", "volo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
opensergo-proto = { version = "0.0.1", path = "../opensergo-proto" }

anyhow = "1"
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
